  * conf/reportbug.conf, debian/rules
    - moved reportbug.conf to conf/ dir
  * share/{handle_bugscript, presubj, reportbug.el, script}, setup.py
    - moved files installed in /usr/share/... into share/ to clean up top level
      directory
  * reportbug/test_hiermatch.py, test/test_hiermatch.py
    - removed reportbug/test_hiermatch.py, partially merget into
      test/test_hiermatch.py

 -- Sandro Tosi <morph@debian.org>  Fri, 16 Jan 2009 10:01:29 +0100

reportbug (3.99.1) experimental; urgency=low

  * reportbug/__init__.py
    - updated version number
  * reportbug/ui/{__init__.py,newt_ui.py}, test/test_reportbug_ui_newt.py
    - removed newt UI, since unused, broken, unmaintained
  * bin/reportbug
    - call the correct method for sign a message; thanks to Chris Taylor for the
      report; Closes: #503425
  * reportbug/submit.py
    - get_email_addr is from utils, fixed the import and the instruction
  * bin/querybts
    - replaced 'ewrite' (since not defined) with 'print'; thanks to Jiří
      Paleček for the report and Luca Bruno for the patch; Closes: #492908
  * reportbug/debianbts.py
    - added 'buildd.debian.org' pseudo package
  * reportbug/debianbts.py, bin/reportbug
    - removed 'kernel' and 'linux-image' pseudo packages, since now 'linux-2.6'
      source package is to be used, adding a warning and replacing those old
      packages with 'linux-2.6' automatically; thanks to Moritz Muehlenhoff for
      the report; Closes: #510690

 -- Sandro Tosi <morph@debian.org>  Thu, 15 Jan 2009 11:10:48 +0100

reportbug (3.99.0) experimental; urgency=low

  [ Chris Lawrence ]
  * Split off python-reportbug into a separate package.

  [ Sandro Tosi ]
  * Split off python-reportbug into a separate package
    - bin/reportbug
      + fixed VERSION and COPYRIGHT import
      + hacked the way to identify working ui
      + remove module name from some methods call, since we import selectively
        some methods only
    - setup.py