@@ -3,6 +3,7 @@
 # reportbug - Report a bug in the Debian distribution.
 #   Written by Chris Lawrence <lawrencc@debian.org>
 #   Copyright (C) 1999-2008 Chris Lawrence
+#   Copyright (C) 2008-2009 Sandro Tosi <morph@debian.org>
 #
 # This program is freely distributable per the following license:
 #
