@@ -1,6 +1,7 @@
 # Text user interface for reportbug
 #   Written by Chris Lawrence <lawrencc@debian.org>
 #   (C) 2001-08 Chris Lawrence
+#   Copyright (C) 2008-2009 Sandro Tosi <morph@debian.org>
 #
 # This program is freely distributable per the following license:
 #
