@@ -10,8 +10,10 @@ reportbug (3.99.2) UNRELEASED; urgency=low
   * reportbug/test_hiermatch.py, test/test_hiermatch.py
     - removed reportbug/test_hiermatch.py, partially merget into
       test/test_hiermatch.py
+  * bin/*, reportbug/*, reportbug/ui/*, debian/copyright
+    - updated copyright information, in particular adding me 
 
- -- Sandro Tosi <morph@debian.org>  Fri, 16 Jan 2009 10:01:29 +0100
+ -- Sandro Tosi <morph@debian.org>  Fri, 16 Jan 2009 10:40:29 +0100
 
 reportbug (3.99.1) experimental; urgency=low
 
